# flowhigh

./: .gitignore  LICENSE  README.md  app.py  cfm_superresolution.py  data.py  example.py  inference.py  init_vocoder.py  modules.py  postprocessing.py  pyproject.toml  requirements.txt  train.py  trainer.py  utils.py
configs/: config.json
src/flowhigh/: __init__.py  cfm_superresolution.py  flowhigh.py  flowhighsr.py  postprocessing.py  utils.py
src/flowhigh/models/: __init__.py  attend.py  common.py  convnext.py  flow.py  melvoco.py  modules.py  pos_emb.py  transformer.py
src/flowhigh/models/bigvgan/: init_vocoder.py  meldataset.py  utils.py
src/flowhigh/train/: data.py  train.py  trainer.py
vocoder/BIGVGAN/bigvgan/: models.py  utils.py
vocoder/BIGVGAN/config/: bigvgan_48khz_256band_config.json
